# hiveVirtualGeometryR

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/hive/hivevirtualgeometryr/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Common.h  RawOpenGL.cpp  Renderer.cpp  Renderer.h  SequenceFrameRenderer.cpp  SequenceFrameRenderer.h  ShaderSource.h  TextureAsset.cpp  TextureAsset.h  UtilAsset.cpp  UtilAsset.h  main.cpp
app/src/main/java/com/hive/hivevirtualgeometryr/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/hive/hivevirtualgeometryr/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
